--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
         {% block corecss %}
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-            <link rel="stylesheet" href="{% static 'css/baseu.css' %}">
+            <link rel="stylesheet" href="{% static 'css/basev.css' %}">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Hurricane&family=Lato&family=Playfair+Display&family=Roboto:wght@700&display=swap" rel="stylesheet">
@@ -149,8 +149,8 @@
         {% block footer %}
         <div class="container">
             <div class="row">
-                <div class="col-4">
-                    <!-- Begin Mailchimp Signup Form -->
+                <!-- <div class="col-4">
+                    Begin Mailchimp Signup Form 
                     <div id="mc_embed_signup">
                     <form action="https://herokuapp.us11.list-manage.com/subscribe/post?u=458ddb926079e4a43a4547b93&amp;id=852522783d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
@@ -164,8 +164,8 @@
                         <div id="mce-responses" class="clear foot">
                             <div class="response" id="mce-error-response" style="display:none"></div>
                             <div class="response" id="mce-success-response" style="display:none"></div>
-                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_458ddb926079e4a43a4547b93_852522783d" tabindex="-1" value=""></div>
+                        </div>     real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_458ddb926079e4a43a4547b93_852522783d" tabindex="-1" value=""></div>
                             <div class="optionalParent">
                                 <div class="clear foot">
                                     <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
@@ -174,18 +174,18 @@
                             </div>
                         </div>
                     </form>
-                    </div>
+                    </div> -->
                     <!--End mc_embed_signup-->
-                </div>
+                </div> 
             </div>
             <div class="row bg-color">
                 <div class="socials col-8 offset-3 col-md-3 offset-md-1">
                     <div class="row">
                         <div class="col-6">
-                            <a href="#" class="social-a" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/" class="social-a" target="_blank"><i class="fab fa-instagram"></i></a>
                         </div>  
                         <div class="col-6">
-                            <a href="#" class="social-a" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                            <a href="https://www.facebook.com/search/top?q=stepldn" class="social-a" target="_blank"><i class="fab fa-facebook-square"></i></a>
                         </div>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
                 $('.toast').toast('show');
             </script>
             <!-- Mailchimp script -->
-            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+            <!-- <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
             <script type='text/javascript'>(function($) {
                 window.fnames = new Array();
                 window.ftypes = new Array();
@@ -228,7 +228,7 @@
                 ftypes[5]='birthday';
                 }(jQuery));
                 var $mcj = jQuery.noConflict(true);
-            </script>
+            </script> -->
         {% endblock %}
 
     </body>
