README.md wireframes,userstories,objectives

--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -39,7 +39,10 @@
                         <button class="btn btn-black rounded-0" type="submit">Add Product</button>
                     </div>
                 </form>
-            </div>            
+            </div>     
+            <div class="col-12 col-md-6">
+                <a class="btn btn-outline-black rounded-0" href="{% url 'view_contact' %}">Check messages</a>
+            </div>       
         </div>
     </div>
 {% endblock %}
