--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -14,12 +14,12 @@
                 <hr>
             </div>
         </div>
-        <div class="row bg-color">
+        <div class="unsubscribe-box row bg-color">
             <div class="col-12 col-md-8 offset-md-1 box-container box-up">
                 <form action="" method="post">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <input type="submit" value="Submit">
+                    <input class="btn-outline-black" type="submit" value="Submit">
                 </form>
             </div>
         </div>
