--- a/contact/templates/contact/success.html
+++ b/contact/templates/contact/success.html
@@ -1,6 +1,3 @@
-<h1>Thank you for your inquiry</h1>
-<p>Your contact information and message was successfully submitted.</p>
-
 {% extends "base.html" %}
 {% load static %}
 
@@ -17,7 +14,7 @@
                 <hr>
             </div>
         </div>
-        <div class="row bg-color">
+        <div class="unsubscribe-box row bg-color">
             <div class="col-md-8 offset-md-1 box-container box-up">
                 <h1>Thank you for your inquiry</h1>
                 <p>Your contact information and message was successfully submitted.</p>
