Edit testing on README.md

--- a/contact/templates/contact/view_contact.html
+++ b/contact/templates/contact/view_contact.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %}
 {% load static %}
 
 {% block extra_css %}
@@ -33,4 +33,4 @@
             {% endif %}
         </div>
     </div>
-{% endblock %}
+{% endblock %} -->
