fixing a url in index

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -44,7 +44,7 @@
                 <input class="btn-outline-black" type="submit" value="Subscribe">
             </form>
             <br>
-            <small class="unsub"><a href="{% url '#' %}">I want to unsubscribe</a></small>
+            <small class="unsub"><a href="{% url 'home' %}">I want to unsubscribe</a></small>
         </div>
     </div>
 </div>
