--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,22 +14,22 @@
     <div class="row bg-color">
         <div class="col-12 col-md-6 img-up">
             <a href="{% url 'products' %}?category=mens_trainers,mens_flipflops">
-                <img class="home-img img-up" src="../media/home-img2.png" alt="mens shoes home page image">
+                <img class="home-img img-up" src="{{ MEDIA_URL }}home-img2.png" alt="mens shoes home page image">
             </a>
         </div>
         <div class="col-12 col-md-6 img-down">
             <a href="{% url 'products' %}?category=womens_trainers,womens_flipflops">
-                <img class="home-img" src="../media/home-img1.png" alt="womens shoes home page image">
+                <img class="home-img" src="{{ MEDIA_URL }}home-img1.png" alt="womens shoes home page image">
             </a>
         </div>
         <div class="col-12 col-md-6 img-up">
             <a href="{% url 'products' %}?category=childrens_trainers,childrens_flipflops">
-                <img class="home-img" src="../media/home-img4.png" alt="childrens shoes home page image">
+                <img class="home-img" src="{{ MEDIA_URL }}home-img4.png" alt="childrens shoes home page image">
             </a>
         </div>
         <div class="col-12 col-md-6 img-down">
             <a href="{% url 'products' %}?category=accessories">
-                <img class="home-img" src="../media/home-img3.png" alt="accessories home page image">
+                <img class="home-img" src="{{ MEDIA_URL }}home-img3.png" alt="accessories home page image">
             </a>
         </div>
     </div>
