--- a/templates/base.html
+++ b/templates/base.html
@@ -160,7 +160,7 @@
                     </div>
                 </div>
                 <div class="t-and-c col-12 col-md-4 text-center">
-                    <a href="#">Terms and conditions</a> | <a href="#"> Privacy policy</a>
+                    <a  target="_blank" href="https://www.termsfeed.com/live/f7e7e8f1-cf34-4bf0-8cb4-a090894e436c">Terms and conditions</a> | <a target="_blank" href="https://www.privacypolicygenerator.info/live.php?token=FnO1UQDLZ6nZmqMlJv9h3I0EbvEkiPuD"> Privacy policy</a>
                     <br>
                     <a href="#" class="">Site Map</a>
                 </div>
@@ -179,26 +179,6 @@
             <script>
                 $('.toast').toast('show');
             </script>
-            <!-- Mailchimp script -->
-            <!-- <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-            <script type='text/javascript'>(function($) {
-                window.fnames = new Array();
-                window.ftypes = new Array();
-                fnames[0]='EMAIL';
-                ftypes[0]='email';
-                fnames[1]='FNAME';
-                ftypes[1]='text';
-                fnames[2]='LNAME';
-                ftypes[2]='text';
-                fnames[3]='ADDRESS';
-                ftypes[3]='address';
-                fnames[4]='PHONE';
-                ftypes[4]='phone';
-                fnames[5]='BIRTHDAY';
-                ftypes[5]='birthday';
-                }(jQuery));
-                var $mcj = jQuery.noConflict(true);
-            </script> -->
         {% endblock %}
 
     </body>
