Add site map url

--- a/templates/base.html
+++ b/templates/base.html
@@ -162,7 +162,7 @@
                 <div class="t-and-c col-12 col-md-4 text-center">
                     <a  target="_blank" href="https://www.termsfeed.com/live/f7e7e8f1-cf34-4bf0-8cb4-a090894e436c">Terms and conditions</a> | <a target="_blank" href="https://www.privacypolicygenerator.info/live.php?token=FnO1UQDLZ6nZmqMlJv9h3I0EbvEkiPuD"> Privacy policy</a>
                     <br>
-                    <a href="#" class="">Site Map</a>
+                    <a href="https://steplondon.herokuapp.com/sitemap.xml" class="">Site Map</a>
                 </div>
                 <div class="contacts col-12 col-md-3">
                     <h4>Contact us:</h4>
