README.md Added SEO and Marketing

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,14 @@
             <meta http-equiv="X-UA-Compatible" content="ie=edge">
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+            <meta name="description"
+                content="Trainers your kids could walk in all day, Great shoes for running,\
+                Casual shoes for men,No lace trainers">
+            <meta name="keywords"
+                content="shoe shop online, kids shoes, comfy shoes, laces, footwear,\
+                ladies trainers, comfortable, shoe cleaner,shoes for men,\
+                shoes london, buy shoes, shoe website elastic laces">
+
         {% endblock %}
 
         {% block extra_meta %}
@@ -162,7 +170,7 @@
                 <div class="t-and-c col-12 col-md-4 text-center">
                     <a  target="_blank" href="https://www.termsfeed.com/live/f7e7e8f1-cf34-4bf0-8cb4-a090894e436c">Terms and conditions</a> | <a target="_blank" href="https://www.privacypolicygenerator.info/live.php?token=FnO1UQDLZ6nZmqMlJv9h3I0EbvEkiPuD"> Privacy policy</a>
                     <br>
-                    <a href="https://steplondon.herokuapp.com/sitemap.xml" class="">Site Map</a>
+                    <a href="#" class="">Site Map</a>
                 </div>
                 <div class="contacts col-12 col-md-3">
                     <h4>Contact us:</h4>
