--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -102,6 +102,38 @@
                 </div>
             </form>
         </div>
+        <div class="row reviews">
+            <div class="col-12 bg-color">
+                <h3 class="logo-f">Reviews</h2>
+                <hr>
+                {% for review in reviews %}
+                    <div class="">
+                        <p class="font-weight-bold">
+                            {{ review.name }}
+                            <span class=" text-muted font-weight-normal">
+                            {{ review.created_on }}
+                            </span>
+                        </p>
+                        {{ review.body | linebreaks }}
+                        <hr>
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="col-12">
+                {% if new_review %}
+                    <div class="alert alert-success" role="alert">
+                    Your review is awaiting moderation
+                    </div>
+                {% else %}
+                    <h3 class="logo-f">Leave a review</h3>
+                    <form method="post">
+                        {{ review_form|crispy }}
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-black rounded-0 text-uppercase mt-5">Submit</button>
+                    </form>
+                {% endif %}
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
