--- a/templates/404.html
+++ b/templates/404.html
@@ -2,17 +2,11 @@
 {% load static %}
 {% load bag_tools %}
 
-{% block page_header %}
-  <div class="container header-container">
-    <div class="row">
-      <div class="col"></div>
-    </div>
-  </div>
-{% endblock %}
-
 {% block content %}
-  <div class="overlay"></div>
   <div class="container mt-5">
+   <div class="row white-container">
+         <div class=""></div>
+   </div>
     <div class="row">
       <div class="col">
         <hr>
