--- a/templates/404.html
+++ b/templates/404.html
@@ -4,10 +4,7 @@
 
 {% block content %}
   <div class="container mt-5">
-   <div class="row white-container">
-         <div class=""></div>
-   </div>
-    <div class="row">
+    <div class="row bag">
       <div class="col">
         <hr>
         <h2 class="logo-font my-4 text-center">404 page not found</h2>
