--- a/home/templates/home/unsubscribe.html
+++ b/home/templates/home/unsubscribe.html
@@ -13,7 +13,7 @@
             <br>
         </div>
     </div>
-    <div class="unsubscribe-box row bg-color">
+    <div class="unsubscribe-box bottom-m row bg-color">
         <div class="col-10 offset-1 col-md-8 box-up box-container">
             <h3 class="logo-f">Unsubscribe</h3>
             <br>
