--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -24,7 +24,7 @@
                 </form>
             </div>
         </div>
-        <div class="row bg-color">
+        <div class="row bg-color bottom-m">
             <div class="col-10 offset-1 box-container col-md-8 offset-md-2 box-up">
                 <p class="text-muted">Order History</p>
                 <div class="order-history table-responsive">
