--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -14,7 +14,7 @@
                 <hr>
             </div>
         </div>
-        <div class="unsubscribe-box row bg-color">
+        <div class="bottom-m row bg-color">
             <div class="col-12 col-md-8 offset-md-1 box-container box-up">
                 <form action="" method="post">
                     {% csrf_token %}
