--- a/contact/templates/contact/success.html
+++ b/contact/templates/contact/success.html
@@ -14,10 +14,10 @@
                 <hr>
             </div>
         </div>
-        <div class="unsubscribe-box row bg-color">
+        <div class="unsubscribe-box bottom-m row bg-color">
             <div class="col-md-8 offset-md-1 box-container box-up">
-                <h1>Thank you for your inquiry</h1>
-                <p>Your contact information and message was successfully submitted.</p>
+                <h3 class="logo-f">Thank you for your inquiry</h3>
+                <p class="text-center">Your contact information and message was successfully submitted.</p>
             </div>
         </div>
     </div>
