--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -12,11 +12,8 @@
 {% block content %}
 
     <div class="container">
-        <div class="row">
-            <div class="col white-container "></div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-md-6">
+        <div class="row bag">
+            <div class="col-12 col-md-8 offset-md-2">
                 <hr>
                 <h2 class="logo-f mb-4">Product Management</h2>
                 <h5 class="text-muted">Edit Product</h5>
@@ -25,7 +22,7 @@
         </div>
 
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-8 offset-md-2">
                 <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
