--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -11,9 +11,8 @@
 
 {% block content %}
 <div class="container-fluid">
-    <div class="row s-white-container"></div>
     <div class="row">
-        <div class="col text-center mt-3">
+        <div class="col text-center bag mt-3">
             {% for c in current_categories %}
                 <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
                     <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
