--- a/static/css/baseb.css
+++ b/static/css/baseb.css
@@ -86,12 +86,12 @@ html {
 
 .white-container {
     background-color: white;
-    padding: 40%;
+    padding: 30%;
 } 
 
 .s-white-container {
     background-color: white;
-    padding: 40%;
+    padding: 30%;
 }
 
 .box-container {
@@ -119,19 +119,27 @@ html {
     color: #000 !important;
 }
 
+.bottom-m {
+    margin-bottom: 5%;
+}
+
 /* Base */
 .search {
     display: none;
 }
 
 .banner {
-    padding: 1% 0;
     border: 2px solid black;
     background-color: white;
 }
 
 .t-and-c, .socials {
     padding-top: 5%;
+}
+
+.social-a{
+    font-size: xx-large;
+    color: black !important;
 }
 
 .contacts {
@@ -142,8 +150,8 @@ html {
 /* Home Page */
 .home-img {
     border: 2px solid black;
-    width: 80%;
-    margin: 10%;
+    width: 90%;
+    margin: 5%;
 }
 
 .news {
@@ -157,12 +165,6 @@ html {
 .unsub a{
     color:#6c757d !important;
     text-decoration: none !important;
-}
-
-/* Unsubscribe */
-
-.unsubscribe-box {
-    margin-bottom: 5%;
 }
 
 /* Details Page */
@@ -203,43 +205,48 @@ html {
 /* Shopping Bag */
 
 .bag {
-    padding-top: 85%;
+    padding-top: 55%;
+}
+
+.free-deliv {
+    padding: 5%;
+    text-align: left;
 }
 
 .default-info {
     margin-bottom: 10%;
 }
 
+.bag-row {
+    margin-left: 0% !important;
+    padding-top: 5%;
+}
+
 /* Screens Medium  */
 @media (min-width: 500px) {
     /* General  */
     .white-container {
-    padding: 20%;
+    padding: 17%;
     }
 
     .s-white-container {
-        padding: 17%;
+        padding: 10%;
     }
 
     /* Base */
     .contacts {
         text-align: right;
-        padding-bottom: 5%;
+        padding: 0;
         font-size: small;
     }
 
     .socials {
-        padding-top: 10%;
+        padding-top: 3%;
     }
 
     .t-and-c {
-        padding-top: 10%;
+        padding-top: 5%;
         font-size: small;
-    }
-
-    .social-a{
-        font-size: xx-large;
-        color: black !important;
     }
 
     /* Home Page */
@@ -255,7 +262,7 @@ html {
 
     /* Details Page */
     .detail-img {
-        width: 60%;
+        width: 90%;
         margin: 10%;
         position: relative;
         bottom: 20%
@@ -272,7 +279,7 @@ html {
     /* Shopping Bag */
 
     .bag {
-        padding-top: 35%;
+        padding-top: 25%;
     }
 }
 
@@ -284,7 +291,7 @@ html {
     }
 
     .s-white-container {
-        padding: 10%;
+        padding: 7%;
     }
 
     .search {
@@ -297,7 +304,7 @@ html {
 
     /* Base */
     .banner p{
-        font-size: smaller;
+        font-size: large;
     }
 
     /* Home Page */
@@ -306,13 +313,19 @@ html {
         bottom: 35px;
     }
 
-    /* Details Page */
-    .detail-img {
+    .home-img {
         width: 70%;
     }
 
+    /* Details Page */
+
     .desc {
-        padding: 5% 0 0 0;    
+        padding-top: 10%;    
+        padding-left: 0;
+    }
+
+    .desc-price {
+        
     }
     
     .details-name {
@@ -322,10 +335,37 @@ html {
     /* Shopping Bag */
 
     .bag {
-        padding-top: 20%;
+        padding-top: 15%;
     }
 }
 
+
+/* Screens X-Larger  */
+@media (min-width: 1000px) {
+    /* General  */
+    .bag {
+        padding-top: 20%;
+    }
+    
+    .white-container {
+        padding: 13%;
+    } 
+}
+
+@media (min-width: 1100px) {
+    /* General  */
+    .bag {
+        padding-top: 15%;
+    }
+
+    .white-container {
+        padding: 10%;
+    }
+
+    .s-white-container {
+        padding: 5%;
+    }
+}
 
 /* Convenience classes - colors copied from Bootstrap */
 .arrow-primary {
