--- a/templates/404.html
+++ b/templates/404.html
@@ -12,7 +12,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row bottom-m">
       <div class="col">
         <p class="text-center">You found a page that does not exist, please click the button to go back.</p>
         <a href="{% url 'home' %}" class="btn btn-blue btn-lg rounded-0 text-uppercase py-3 mx-auto d-block">
