--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -6,10 +6,10 @@
 
 {% block content %}
     <div class="container header-container">
-        <div class="row white-container">
+        <div class="row s-white-container">
             <div class=""></div>
         </div>
-        <div class="row bg-color out">
+        <div class="row bg-color out bottom-m">
             <div class="col-10 offset-1 col-md-8 text-center box-up box-container">
                 <h1 class="logo-f">{% trans "Sign Out" %}</h1>
                 <br>
