--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
         {% block corecss %}
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-            <link rel="stylesheet" href="{% static 'css/base.css' %}">
+            <link rel="stylesheet" href="{% static 'css/baseb.css' %}">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Hurricane&family=Lato&family=Playfair+Display&family=Roboto:wght@700&display=swap" rel="stylesheet">
@@ -121,9 +121,9 @@
             </div>
 
             <div class="container h-100">
-                <div class="row h-100 banner">
+                <div class="row banner">
                     <div class="col-12 col-md-12 my-auto text-center">
-                        <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
+                        <p class="logo-f my-1">Free delivery on orders over £{{ free_delivery_threshold }}!</p>                
                     </div>
                 </div>
             </div>
@@ -154,7 +154,7 @@
         {% endblock %}
 
         {% block footer %}
-        <div class="container">
+        <div class="container w-100 margin-0">
             <div class="row bg-color">
                 <div class="socials col-8 offset-3 col-md-3 offset-md-1">
                     <div class="row">
@@ -168,8 +168,6 @@
                 </div>
                 <div class="t-and-c col-12 col-md-4 text-center">
                     <a  target="_blank" href="https://www.termsfeed.com/live/f7e7e8f1-cf34-4bf0-8cb4-a090894e436c">Terms and conditions</a> | <a target="_blank" href="https://www.privacypolicygenerator.info/live.php?token=FnO1UQDLZ6nZmqMlJv9h3I0EbvEkiPuD"> Privacy policy</a>
-                    <br>
-                    <a href="" class="">Site Map</a>
                 </div>
                 <div class="contacts col-12 col-md-3">
                     <h4>Contact us:</h4>
