--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
 {% load bag_tools %}
-
-
 {% block content %}
     <div class="container">
         <div class="row bag">
@@ -31,7 +29,7 @@
                                     <div class="row">
                                         <div class="col">
                                             <p class="my-0"><strong>{{ item.product.name }} - <strong>Size: </strong>{% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</strong></p>
-                                            <p class="my-0">${{ item.product.price }}</p>
+                                            <p class="my-0">£{{ item.product.price }}</p>
                                             <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
                                             <br>
                                         </div>
@@ -73,7 +71,7 @@
                                         </div>
                                         <br>
                                         <div class="col-12">
-                                            <p class="my-0">  ${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                            <p class="my-0"> £{{ item.product.price | calc_subtotal:item.quantity }}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -110,7 +108,7 @@
                             <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
                         </div>
                         <div class="col-3 text-right">
-                            <p class="my-0 small text-muted">${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                            <p class="my-0 small text-muted">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
                         </div>
                     </div>
                 {% endfor %}
@@ -122,13 +120,13 @@
                         <p class="my-0">Grand Total:</p>
                     </div>
                     <div class="col-3">
-                        <p class="my-0">${{ total | floatformat:2 }}</p>
-                        <p class="my-0">${{ delivery | floatformat:2 }}</p>
-                        <p class="my-0"><strong>${{ grand_total | floatformat:2 }}</strong></p>
+                        <p class="my-0">£{{ total | floatformat:2 }}</p>
+                        <p class="my-0">£{{ delivery | floatformat:2 }}</p>
+                        <p class="my-0"><strong>£{{ grand_total | floatformat:2 }}</strong></p>
                     </div>
                     {% if free_delivery_delta > 0 %}
                         <p class="mb-1 text-danger free-deliv">
-                            You could get free delivery by spending just <strong>${{ free_delivery_delta }}</strong> more!
+                            You could get free delivery by spending just <strong>£{{ free_delivery_delta }}</strong> more!
                         </p>
                     {% endif %}
                 </div>
@@ -172,18 +170,16 @@
         </div>
     </div>
 {% endblock %}
-
 {% block postloadjs %}
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
-
 <script>
     // Update quantity on click
     $('.update-link').click(function(e) {
         var form = $(this).prev('.update-form');
         form.submit();
     })
-
+	
     // Remove item and reload on click
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
