--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
-
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'profiles/css/profilea.css' %}">
 {% endblock %}
-
 {% block content %}
     <div class="container">
         <div class="row bag">
@@ -16,7 +14,7 @@
         </div>
         <div class="bottom-m row bg-color">
             <div class="col-12 col-md-8 offset-md-1 box-container box-up">
-                <form action="" method="post">
+                <form method="post">
                     {% csrf_token %}
                     {{ form|crispy }}
                     <input class="btn-outline-black" type="submit" value="Submit">
