--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,10 +1,5 @@
 {% extends "base.html" %}
 {% load static %}
-
-{% block page_header %}
-   
-{% endblock %}
-
 {% block content %}
 <div class="container header-container">
     <div class="row">
@@ -38,7 +33,7 @@
             <h3>Subscribe!</h3>
             <p>Sign up to our newsletter to get all the latest deals!</p>
             <div class="text-right"><span class="asterisk">*</span> indicates required</div>
-            <form action="" method="post">
+            <form method="post">
                 {% csrf_token %}
                 {{ form|crispy }}
                 <input class="btn-outline-black" type="submit" value="Subscribe">
