--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,14 +1,5 @@
 {% extends "base.html" %}
 {% load static %}
-
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
-{% endblock %}
-
 {% block content %}
 <div class="container-fluid">
     <div class="row">
@@ -67,7 +58,7 @@
                             <div class="card-footer bg-white pt-0 border-0 text-left">
                                 <div class="row">
                                     <div class="col">
-                                        <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                                        <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
                                         {% if product.category %}
                                             <p class="small mt-1 mb-0">
                                                 <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
@@ -122,7 +113,6 @@
     </div>
 </div>
 {% endblock %}
-
 {% block postloadjs %}
     {{ block.super }}
     <script>
@@ -130,7 +120,7 @@
 			window.scrollTo(0,0)
 		})
 	</script>
-    
+
     <script>
         $('#sort-selector').change(function() {
             var selector = $(this);
