--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,10 +1,7 @@
 {% extends "account/base.html" %}
-
 {% load i18n %}
 {% load account socialaccount %}
-
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
-
 {% block content %}
     <div class="container header-container">
         <div class="row s-white-container">
@@ -15,30 +12,22 @@
                 <h1 class="logo-f">{% trans "Sign In" %}</h1>
                 <br>
                 {% get_providers as socialaccount_providers %}
-
                 {% if socialaccount_providers %}
                 <p>{% blocktrans with site.name as site_name %}Please sign in with one
                 of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
                 for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
                 <div class="socialaccount_ballot">
-
                   <ul class="socialaccount_providers">
                     {% include "socialaccount/snippets/provider_list.html" with process="login" %}
                   </ul>
-
                   <div class="login-or">{% trans 'or' %}</div>
-
                 </div>
-
                 {% include "socialaccount/snippets/login_extra.html" %}
-
                 {% else %}
                 <p>{% blocktrans %}If you have not created an account yet, then please
                 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
                 {% endif %}
                 <br>
-
                 <form class="login" method="POST" action="{% url 'account_login' %}">
                   {% csrf_token %}
                   {{ form|crispy }}
@@ -46,20 +35,15 @@
                   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                   {% endif %}
                   <button class="primaryAction btn btn-outline-black rounded-0 btn-lg long-btn" type="submit">{% trans 'SIGN IN' %} &raquo;</button>
-                  <p class="mt-2">
-                    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-                  </p>
                 </form>
                 <br>
                 <div class="row register">
-                    <p>Dont have an account yet?</p>
-                     
-                    <a href="#" class="btn btn-outline-black rounded-0 btn-lg">
+                    <p>Dont have an account yet?</p>                    
+                    <a href="{{ signup_url }}" class="btn btn-outline-black rounded-0 btn-lg">
                         <span class="text-uppercase">Register Now</span>
                     </a>
                 </div>
             </div>
         </div>
     </div>
-
 {% endblock %}
