--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!doctype html>
 <html lang="en">
     <head>
@@ -14,12 +13,9 @@
                 content="shoe shop online, kids shoes, comfy shoes, laces, footwear,\
                 ladies trainers, comfortable, shoe cleaner,shoes for men,\
                 shoes london, buy shoes, shoe website elastic laces">
-
         {% endblock %}
-
         {% block extra_meta %}
         {% endblock %}
-
         {% block corecss %}
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
             <link rel="stylesheet" href="{% static 'css/baseb.css' %}">
@@ -27,10 +23,8 @@
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Hurricane&family=Lato&family=Playfair+Display&family=Roboto:wght@700&display=swap" rel="stylesheet">
         {% endblock %}
-
         {% block extra_css %}
         {% endblock %}
-
         {% block corejs %}
             <script src="https://kit.fontawesome.com/b62f6ec01c.js" crossorigin="anonymous"></script>
             <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -39,10 +33,8 @@
             <!-- Stripe -->
             <script src="https://js.stripe.com/v3/"></script>
             {% endblock %}
-
         {% block extra_js %}
         {% endblock %}
-
         <title>StepLDN {% block extra_title %}{% endblock %}</title>
     </head>
     <body>
@@ -119,16 +111,14 @@
                     {% include 'includes/main-nav.html' %}
                 </nav>
             </div>
-
             <div class="container h-100">
                 <div class="row banner">
                     <div class="col-12 col-md-12 my-auto text-center">
-                        <p class="logo-f my-1">Free delivery on orders over £{{ free_delivery_threshold }}!</p>                
+                        <p class="logo-f my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</p>                
                     </div>
                 </div>
             </div>
         </header>
-
         {% if messages %}
             <div class="message-container">
                 {% for message in messages %}
@@ -146,13 +136,10 @@
                 {% endfor %}
             </div>
         {% endif %}
-
         {% block page_header %}
         {% endblock %}
-
         {% block content %} 
         {% endblock %}
-
         {% block footer %}
         <div class="container w-100 margin-0">
             <div class="row bg-color">
@@ -179,12 +166,10 @@
             </div>
         </div>
         {% endblock %}
-
         {% block postloadjs %}
             <script>
                 $('.toast').toast('show');
             </script>
         {% endblock %}
-
     </body>
 </html>
