--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -6,7 +6,7 @@
                 <div><i class="fa-light fa-chevrons-down"></i></div>
             </div>
         </a>
-        <div class="dropdown-menu border-black" aria-labelledby="user-options">
+        <div class="dropdown-menu border-black dropdown-right" aria-labelledby="user-options">
             <a href="{% url 'products' %}?category=mens_trainers,mens_flipflops" class="dropdown-item">All Mens Shoes</a>
             <a href="{% url 'products' %}?category=mens_trainers" class="dropdown-item">Trainers</a>
             <a href="{% url 'products' %}?category=mens_flipflops" class="dropdown-item">Flipflops</a>
