--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -110,7 +110,7 @@
             </div>
             <div class="col-12 col-md-6">
                 {% if new_review %}
-                    <div class="alert alert-success" role="alert">
+                    <div class="alert alert-secondary" role="alert">
                     Your review is awaiting moderation
                     </div>
                 {% else %}
