Edit email confirmation.html

--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -5,14 +5,15 @@
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
-<div class="row white-container">
-    <div class=""></div>
-</div>
-<div class="row white-container">
-    <div class=""></div>
-</div>
-    <h1>{% trans "Verify Your E-mail Address" %}</h1>
-
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-
+    <div class="container header-container">
+        <div class="row s-white-container">
+            <div class=""></div>
+        </div>
+        <div class="row bg-color out bottom-m">
+            <div class="col-10 offset-1 col-md-8 text-center box-up box-container">
+                <h1>{% trans "Verify Your E-mail Address" %}</h1>
+                <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>            
+            </div>
+        </div>
+    </div>
 {% endblock %}
