Edit allauth pages

--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,17 +5,19 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-<div class="row white-container">
-    <div class=""></div>
+<div class="container header-container">
+    <div class="row s-white-container">
+        <div class=""></div>
+    </div>
+    <div class="row bg-color out bottom-m">
+        <div class="col-10 offset-1 col-md-8 text-center box-up box-container">
+            <h1>{% trans "Change Password" %}</h1>
+            <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+                {% csrf_token %}
+                {{ form|crisry }}
+                <button type="submit" name="action">{% trans "Change Password" %}</button>
+            </form>
+        </div>
+    </div>
 </div>
-<div class="row white-container">
-    <div class=""></div>
-</div>
-    <h1>{% trans "Change Password" %}</h1>
-
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form|crisry }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-    </form>
 {% endblock %}
