--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -6,24 +6,25 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-<div class="row white-container">
-    <div class=""></div>
+<div class="container header-container">
+    <div class="row s-white-container">
+        <div class=""></div>
+    </div>
+    <div class="row bg-color out bottom-m">
+        <div class="col-10 offset-1 col-md-8 text-center box-up box-container">
+           <h1>{% trans "Password Reset" %}</h1>
+            {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+            {% endif %}
+            <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+            <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <input type="submit" value="{% trans 'Reset My Password' %}" />
+            </form>
+            <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+        </div>
+    </div>
 </div>
-<div class="row white-container">
-    <div class=""></div>
-</div>
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
-
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    
 {% endblock %}
