--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -5,17 +5,19 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-<div class="row white-container">
-    <div class=""></div>
-</div>
-<div class="row white-container">
-    <div class=""></div>
-</div>
-    <h1>{% trans "Set Password" %}</h1>
-
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+<div class="container header-container">
+    <div class="row s-white-container">
+        <div class=""></div>
+    </div>
+    <div class="row bg-color out bottom-m">
+        <div class="col-10 offset-1 col-md-8 text-center box-up box-container">
+                <h1>{% trans "Set Password" %}</h1>
+                <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
