--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -7,31 +7,33 @@
 
 
 {% block content %}
-<div class="row white-container">
-    <div class=""></div>
+<div class="container header-container">
+    <div class="row s-white-container">
+        <div class=""></div>
+    </div>
+    <div class="row bg-color out bottom-m">
+        <div class="col-10 offset-1 col-md-8 text-center box-up box-container">
+            <h1>{% trans "Confirm E-mail Address" %}</h1>
+
+            {% if confirmation %}
+            
+            {% user_display confirmation.email_address.user as user_display %}
+            
+            <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
+            
+            <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+            {% csrf_token %}
+                <button type="submit">{% trans 'Confirm' %}</button>
+            </form>
+            
+            {% else %}
+            
+            {% url 'account_email' as email_url %}
+            
+            <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
+            
+            {% endif %}
+        </div>
+    </div>
 </div>
-<div class="row white-container">
-    <div class=""></div>
-</div>
-<h1>{% trans "Confirm E-mail Address" %}</h1>
-
-{% if confirmation %}
-
-{% user_display confirmation.email_address.user as user_display %}
-
-<p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
-
-<form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-{% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
-</form>
-
-{% else %}
-
-{% url 'account_email' as email_url %}
-
-<p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
-
-{% endif %}
-
 {% endblock %}
