--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -35,6 +35,9 @@
                   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                   {% endif %}
                   <button class="primaryAction btn btn-outline-black rounded-0 btn-lg long-btn" type="submit">{% trans 'SIGN IN' %} &raquo;</button>
+                  <p class="mt-2">
+                    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                  </p>
                 </form>
                 <br>
                 <div class="row register">
