--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -6,17 +6,18 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-<div class="row white-container">
-    <div class=""></div>
-</div>
-<div class="row white-container">
-    <div class=""></div>
-</div>
-    <h1>{% trans "Password Reset" %}</h1>
-    
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    
-    <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+    <div class="container header-container">
+        <div class="row s-white-container">
+            <div class=""></div>
+        </div>
+        <div class="row bg-color out bottom-m">
+            <div class="col-10 offset-1 col-md-8 text-center box-up box-container">
+                <h1>{% trans "Password Reset" %}</h1>
+                {% if user.is_authenticated %}
+                {% include "account/snippets/already_logged_in.html" %}
+                {% endif %}
+                <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
